added header photo. Updated padding/margin for h1/header.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="container2">
       <input type="text" name="newShow" value="" class="add-show">
-      <input type="button" name="submitButton" value="Add Something You Want to Watch" class="add-btn">
+      <input type="button" name="submitButton" value="Add A Show" class="add-btn">
     </div><!-- container2 -->
 
     <div class="container3">
