--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
 
     <header>
-      <h1>What Should We Fucking Watch?</h1>
+      <h1>What Should We Watch?</h1>
     </header>
 
     <div class="container1">
